# fluss-rust

./: Cargo.toml  README.md  build.rs
examples/: example-table.rs
src/: args.rs  connection.rs  error.rs  lib.rs
src/admin/: admin.rs
src/metadata/: metadata_serde.rs  metadata_updater.rs  mod.rs  serde_utils.rs
src/record/: log_records.rs  mod.rs  row.rs
src/rpc/: FlussApi.proto  mod.rs
src/table/: mod.rs  table.rs
src/table/scanner/: log.rs  mod.rs
src/util/: mod.rs
