[package]
name = "fluss-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arrow = "55.1.0"
arrow-schema = "55.1.0"
byteorder = "1.5"
clap = { version = "4.5.37", features = ["derive"] }
crc32c = "0.6.8"
linked-hash-map = "0.5.6"
prost = "0.13.5"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.44.2", features = ["full"] }

[build-dependencies]
prost-build = "0.13.5"
